--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
 <head>
 
-    <title>WALK</title>
+    <title>WALKr | Texas Ranger</title>
     <link rel="stylesheet" href="leaflet.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/l.geosearch.css" />
